<?xml version="1.0" encoding="UTF-8"?>

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.michielroos.bitbucket</groupId>
	<artifactId>chainsaw</artifactId>
	<version>1.0.1</version>
	<organization>
		<name>ℳichiel ℛoos</name>
		<url>https://www.michielroos.com/</url>
	</organization>
	<name>Chainsaw</name>
	<description>Trim away stale branches with ease.</description>
	<packaging>atlassian-plugin</packaging>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.atlassian.bitbucket.server</groupId>
				<artifactId>bitbucket-parent</artifactId>
				<version>${bitbucket.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.atlassian.maven.plugins</groupId>
				<artifactId>bitbucket-maven-plugin</artifactId>
				<version>${amps.version}</version>
				<extensions>true</extensions>
				<configuration>
					<allowGoogleTracking>false</allowGoogleTracking>
					<jvmArgs>-Xmx4096m -XX:MaxPermSize=4096m -Xms2048m -XX:PermSize=512m</jvmArgs>
					<enableFastdev>false</enableFastdev>
					<enableQuickReload>true</enableQuickReload>
					<products>
						<product>
							<id>bitbucket</id>
							<instanceId>bitbucket</instanceId>
							<version>${bitbucket.version}</version>
							<dataVersion>${bitbucket.data.version}</dataVersion>
						</product>
					</products>
					<instructions>
						<Atlassian-Plugin-Key>${atlassian.plugin.key}</Atlassian-Plugin-Key>
						<!-- Add package to export here -->
						<Export-Package>com.michielroos.bitbucket.api,</Export-Package>
						<!-- Add package import here -->
						<Import-Package>
							com.atlassian.bitbucket.*,
							javax.servlet*;version="2.4",
							*;resolution:=optional
						</Import-Package>
						<!-- Ensure plugin is Spring powered -->
						<Spring-Context>*</Spring-Context>
					</instructions>
					<skipManifestValidation>true</skipManifestValidation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.atlassian.plugin</groupId>
				<artifactId>atlassian-spring-scanner-maven-plugin</artifactId>
				<version>${atlassian.spring.scanner.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>atlassian-spring-scanner</goal>
						</goals>
						<phase>process-classes</phase>
					</execution>
				</executions>
				<configuration>
					<scannedDependencies>
						<dependency>
							<groupId>com.atlassian.plugin</groupId>
							<artifactId>atlassian-spring-scanner-external-jar</artifactId>
						</dependency>
					</scannedDependencies>
					<verbose>false</verbose>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<bitbucket.version>4.11.2</bitbucket.version>
		<bitbucket.data.version>4.11.2</bitbucket.data.version>
		<amps.version>6.2.6</amps.version>
		<plugin.testrunner.version>1.2.3</plugin.testrunner.version>
		<atlassian.spring.context.version>4.2.2.RELEASE</atlassian.spring.context.version>
		<atlassian.spring.scanner.version>1.2.13</atlassian.spring.scanner.version>
		<!-- This key is used to keep the consistency between the key in atlassian-plugin.xml and the key to generate bundle. -->
		<atlassian.plugin.key>${project.groupId}.${project.artifactId}</atlassian.plugin.key>
	</properties>
</project>
